[tool.poetry]
name = "hw11-fastapi"
version = "0.1.0"
description = ""
authors = ["AndrewUAV <145654146+AndrewUAV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
